--- a/src/main/webapp/WEB-INF/views/index.jade
+++ b/src/main/webapp/WEB-INF/views/index.jade
@@ -1,7 +1,7 @@
 -import io.github.mlidal.todomvc.model.Todo
 -@ val todos : List[Todo]
 
-h1 Scalatra Todo-list
+h1 Scala Fuck List
 
 form(name="newTodo" action="/new" method="post")
     Add new todo:
@@ -9,7 +9,7 @@ form(name="newTodo" action="/new" method="post")
     button(type="submit" name="add")
         New todo
 
-h2 Things to do
+h2 Demoiselles
 ul
 - for (todo <- todos)
     - if (todo.completed)
